--- a/index.html
+++ b/index.html
@@ -4,18 +4,7 @@
         <title>Page Title</title>
     </head> 
     <body>
-        <div class="row">
-            Controls
-        </div>
-        <div class="row">
-
-            <div class="col-md-4 screen">
-                <canvas width="640" height="320" id="screen"></canvas>
-            </div>
-            <div class="col-md-4 screen">
-            </div>
-
-        </div>
+        <div id="app"></div>
         
         <script src="./dist/main.js" type="application/javascript"></script>
     </body>
